# learn_fastAPI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cars/db/: db_cars.py
cars/routers/: cars.py
test/cars/routers/: test_cars_routers.py
